# core

backend/: .coverage  .gitignore  .pre-commit-config.yaml  Taskfile.yml  main.py  pyproject.toml
backend/api/endpoints/: vpn_connector.py
backend/api/router/: router.py
backend/api/schemas/: servers_list_schema.py
backend/configuration/: info.txt  macos_l2tp_connection.py  win_l2tp_connection.py
backend/core/interfaces/: ivpn_connector.py
backend/core/managers/: keychain_manager_macos.py  vpn_manager.py  vpn_manager_macos.py  vpn_manager_win.py
backend/core/services/: handler.py  packer.py  parser.py
backend/dependencies/: vpn_handler_fabric.py  vpn_manager_fabric.py
backend/scripts/bash/: disable_kill_switch.sh  enable_kill_switch.sh  kill_switch.py
backend/scripts/bash/mac/: blockall.conf
backend/scripts/bash/mac_os/: disable_kill_switch.sh  enable_kill_switch.sh  kill_switch.py
backend/scripts/powershell/: rasdial_vpn_connection.py
backend/tests/: conftest.py  test_handler.py  test_ivpn_connector.py  test_kill_switch_framework.py  test_packer.py  test_parser.py  test_supported_os.py  test_vpn_manager_fabric.py
backend/tests/connectors/: test_macos_connector_kill_switch.py  test_macos_connector_l2tp_behavior.py  test_macos_l2tp_connection_config.py
backend/tests/mock_data/: vpngate_mock.csv
backend/utils/reusable/: filters.py  restricted_countries.py  sort_directions.py  sorted_keys.py  supported_os.py  vars.py  vpn_implementations.py
backend/utils/reusable/commands/macos/: commands_execution.py  reusable_commands_map.py
(+48 files in other folders)
