[tool.poetry]
name = "stardust-tunnel-backend"
version = "0.1.0"
description = ""
authors = ["paketoff <kekisreal228@gmail.com>", "paketoff <roman.rudyi.bl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standart"], version = "^0.115.11"}
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"
isort = "^6.0.1"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
