[tool.poetry]
name = "stardust-tunnel-backend"
version = "0.1.0"
description = ""
authors = ["paketoff <kekisreal228@gmail.com>", "paketoff <roman.rudyi.bl@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = {extras = ["standart"], version = "^0.115.11"}
beautifulsoup4 = "^4.13.3"
requests = "^2.32.3"
isort = "^6.0.1"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
httpx = "^0.28.1"
uvicorn = "^0.34.0"
asyncio = "^3.4.3"
aiofiles = "^24.1.0"
keyring = "^25.6.0"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.3"
pre-commit = "^4.2.0"
black = "^25.1.0"
pyinstaller = "^6.12.0"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
